--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,12 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewites":[
+      {
+      "source": "**",
+      "destination": "/index.html"
+      }
     ]
   }
 }
