--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,7 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewites":[
+    "rewrites":[
       {
       "source": "**",
       "destination": "/index.html"
